syntax = "proto3";

package com.ljyh.tabletalk.protobuf;

option java_package = "com.ljyh.tabletalk.protobuf";
option java_outer_classname = "ChatProtos";

// 消息类型枚举
enum MessageType {
  TEXT = 0;
  IMAGE = 1;
  SYSTEM = 2;
}

// 聊天消息
message ChatMessage {
  int64 id = 1;
  int64 room_id = 2;
  int64 sender_id = 3;
  string content = 4;
  MessageType message_type = 5;
  string sender_name = 6;
  string sender_avatar = 7;
  string timestamp = 8;
}

// 发送消息请求
message SendMessageRequest {
  int64 room_id = 1;
  string content = 2;
}

// 加入聊天室请求
message JoinRoomRequest {
  int64 room_id = 1;
}

// 离开聊天室请求
message LeaveRoomRequest {
  int64 room_id = 1;
}

// 通用响应
message ChatResponse {
  bool success = 1;
  string error_message = 2;
  oneof payload {
    ChatMessage message = 3;
    JoinRoomResponse join_response = 4;
    LeaveRoomResponse leave_response = 5;
  }
}

// 加入聊天室响应
message JoinRoomResponse {
  int64 room_id = 1;
  string message = 2;
}

// 离开聊天室响应
message LeaveRoomResponse {
  int64 room_id = 1;
  string message = 2;
}

// WebSocket消息包装器
message WebSocketMessage {
  string type = 1;  // "SEND_MESSAGE", "JOIN_ROOM", "LEAVE_ROOM"
  bytes payload = 2; // 序列化的具体消息
}